Creando la carpeta styles para almacenar style.css

--- a/abilities.html
+++ b/abilities.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="Discover the abilities and powers of Sung Jin-Woo in 'Solo Leveling', from combat techniques to special skills.">
   <meta property="og:image" content="https://images6.alphacoders.com/129/1293436.jpg">
   <title>Sung Jin-Woo Abilities</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
