--- a/biography.html
+++ b/biography.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="Discover the complete biography of Sung Jin-Woo, from his beginnings as a hunter to becoming the strongest in 'Solo Leveling'.">
   <meta property="og:image" content="https://images6.alphacoders.com/129/1293436.jpg">
   <title>Sung Jin-Woo Biography</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
