--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="Explore our gallery of Sung Jin-Woo images, the protagonist of 'Solo Leveling'.">
   <meta property="og:image" content="https://images6.alphacoders.com/129/1293436.jpg">
   <title>Sung Jin-Woo Image Gallery</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
