Organizar y crear la carpeta scripts para almacenar el JS usado en el navbar

--- a/gallery.html
+++ b/gallery.html
@@ -65,42 +65,6 @@
     <p>Developed by <a href="https://github.com/konoec" target="_blank" rel="noreferrer noopener">konoec</a></p>
   </footer>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      // Create overlay element
-      const overlay = document.createElement('div');
-      overlay.classList.add('overlay');
-      document.body.appendChild(overlay);
-
-      const menuIcon = document.querySelector('.menu-icon');
-      const nav = document.querySelector('nav');
-
-      // Toggle menu when icon is clicked
-      menuIcon.addEventListener('click', function() {
-        menuIcon.classList.toggle('active');
-        nav.classList.toggle('active');
-        overlay.classList.toggle('active');
-        document.body.style.overflow = nav.classList.contains('active') ? 'hidden' : '';
-      });
-
-      // Close menu when clicking overlay
-      overlay.addEventListener('click', function() {
-        menuIcon.classList.remove('active');
-        nav.classList.remove('active');
-        overlay.classList.remove('active');
-        document.body.style.overflow = '';
-      });
-
-      // Close menu when clicking a nav link
-      document.querySelectorAll('nav a').forEach(link => {
-        link.addEventListener('click', function() {
-          menuIcon.classList.remove('active');
-          nav.classList.remove('active');
-          overlay.classList.remove('active');
-          document.body.style.overflow = '';
-        });
-      });
-    });
-  </script>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
